--- a/style.css
+++ b/style.css
@@ -60,6 +60,11 @@ a:hover {
     -webkit-text-fill-color: transparent;
 }
 
+.logo-white {
+    -webkit-text-fill-color: white;
+    background-clip: initial;
+}
+
 .nav-links {
     display: none;
     list-style: none;
@@ -664,3 +669,4 @@ a:hover {
 .delay-2 { animation-delay: 0.4s; }
 .delay-3 { animation-delay: 0.6s; }
 .delay-4 { animation-delay: 0.8s; }
+
